add new folder Pizza and new index

--- a/LaMiaPizzeria/Views/Shared/_Header.cshtml
+++ b/LaMiaPizzeria/Views/Shared/_Header.cshtml
@@ -14,6 +14,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="@Url.Action("Privacy", "Home")">Privacy</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="@Url.Action("Index", "Pizza")">Pizze</a>
+            </li>
 
         </ul>
     </div>
