--- a/LaMiaPizzeria/Views/Shared/_MioLayout.cshtml
+++ b/LaMiaPizzeria/Views/Shared/_MioLayout.cshtml
@@ -7,21 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="/css/site.css" rel="stylesheet"/>
 </head>
-<body>
+<body class="bg-dark text-white">
 
     <header>
-        @Html.Partial("_Header");
+        @Html.Partial("_Header")
     </header>
 
     <main>
         <!-- Qui sto informando Razor e gli sto dicendo che in questo punto voglio che
         mi copi tutto il codice della vista che il browser vuole vedere -->
-        @RenderBody();
+        @RenderBody()
 
     </main>
 
     <footer>
-        @Html.Partial("_Footer");
+        @Html.Partial("_Footer")
     </footer>
 
     <script src="~/js/site.js"></script>
