--- a/LaMiaPizzeria/Views/Pizza/Index.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/Index.cshtml
@@ -2,72 +2,68 @@
 
 
 
-@{
-    
-
-        <html>
-        <body class="bg-dark bg-navbar">
-            <main>
-                <div class="container mt-5 text-white">
-                    <div class="row">
 
 
 
-                        <div class="col-12">
-                            <h3>MENU' DELLE PIZZE</h3>
-                        </div>
-                    </div>
-                    <div class="row my-3">
-                        <div class="col-12">
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-12">
+            <h3>Menu' delle pizze</h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <a class="btn btn-primary" href="@Url.Action("Create", "PizzaModel")">
+                Crea nuova pizza
+            </a>
+        </div>
+    </div>
+    <div class="row my-3">
+        <div class="col-12">
 
-                            <table class="table text-white ">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">#</th>
-                                        <th scope="col">Nome</th>
-                                        <th scope="col">Ingredienti</th>
-                                        <th scope="col">Immagine</th>
-                                        <th scope="col">Prezzo</th>
-                                    </tr>
-                                </thead>
-                            @foreach(PizzaModel pizza in Model)
-                            {
-                                
-                                <tbody class="table-group-divider">
-                                    <tr>
-                                        <th scope="row">1</th>
-                                        <td>Margherita</td>
-                                        <td>Pomodoro, mozzarella, basilico</td>
-                                        <td><img src="/img/margherita.jpeg" class="img-fluid img-size" alt="MargheritaS"></td>
-                                        <td>5,00</td>
-                                    </tr>
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">id</th>
+                        <th scope="col">Immagine</th>
+                        <th scope="col">Titolo</th>
+                        <th scope="col">Contenuto</th>
+                        <th scope="col">Azioni</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (PizzaModel pizza in Model)
+                    {
+                        <tr>
+                            <th scope="row">@pizza.Id</th>
+                            <td><img class="img-fluid img_square" src="@pizza.Immagine" alt="Immagine @pizza.Name"></td>
+                            <td>@pizza.Name</td>
+                            <td>
+                                @pizza.Description
+                            </td>
+                            <td>
+                                <a class="btn btn-info btn-sm" href="@Url.Action("Details", "PizzaModel", new { id = pizza.Id })">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
+                                </a>
+                                <a class="btn btn-warning btn-sm mt-2" href="@Url.Action("Update", "PizzaModel", new {id = pizza.Id})">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polygon points="14 2 18 6 7 17 3 17 3 13 14 2"></polygon><line x1="3" y1="22" x2="21" y2="22"></line></svg>
+                                </a>
+                                <form asp-controller="Article" asp-action="Delete" asp-route-id="@pizza.Id" method="post">
+                                    @Html.AntiForgeryToken()
+                                    <button type="submit" class="btn btn-danger btn-sm mt-2">
+                                        >
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
+                                    </button>
+                                </form>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
 
-                                    <tr>
-                                        <th scope="row">2</th>
-                                        <td>Diavola</td>
-                                        <td>Pomodoro, mozzarella, salame piccante, basilico</td>
-                                        <td><img src="/img/diavola.jpeg" class="img-fluid img-size" alt="Diavola"></td>
-                                        <td>8,00</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">3</th>
-                                        <td>Greca</td>
-                                        <td>Pomodoro,olive, basilico</td>
-                                        <td><img src="/img/greca.jpeg" class="img-fluid img-size" alt="Greca"></td>
-                                        <td>4,50</td>
-                                    </tr>
-                                </tbody>
-                             }
-                                </table>
-
-                        </div>
-                       
-                    </div>
-                </div>
-            </main>
-
-        </body>
-        </html>
+        </div>
+    </div>
+</div>
        
-    }
+    
 
