--- a/LaMiaPizzeria/wwwroot/css/site.css
+++ b/LaMiaPizzeria/wwwroot/css/site.css
@@ -43,3 +43,15 @@ body {
 }
 
 
+.form{
+    width: 60%;
+    margin-top: 5%;
+    margin-left: 10%;
+
+}
+
+
+.headercreate {
+    margin-left: 10%;
+    margin-top: 3%;
+}
