--- a/LaMiaPizzeria/Views/Pizza/Create.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/Create.cshtml
@@ -2,7 +2,7 @@
 
 <div class="container">
     <h2 class="mb-3">Aggiunta di un nuovo articolo</h2>
-    <form asp-controller="Article" asp-action="Create" method="post">
+    <form asp-controller="Pizza" asp-action="Create" method="post">
         @Html.AntiForgeryToken()
         <div class="mb-3">
             <label asp-for="Name" class="form-label">Titolo</label>
