--- a/LaMiaPizzeria/Views/Home/Index.cshtml
+++ b/LaMiaPizzeria/Views/Home/Index.cshtml
@@ -1,29 +1,5 @@
-﻿<form>
-    <div class="headercreate">
-        <h2>Crea la tua pizza!</h2>
-
-    </div>
-    <div class="form">
-    <div class="mb-3 ml-5">
-        <label for="exampleInputTitolo1" class="form-label">Titolo</label>
-        <input type="email" class="form-control" id="exampleInputTitolo1">
-       
-    </div>
-    <div class="mb-3 ml-5">
-        <label for="exampleInputUrl1" class="form-label">Url</label>
-        <input type="Url" class="form-control" id="exampleInputUrl1">
-    </div>
-    <div class="col-sm-10">
-        <label for="exampleInputDescription1" class="form-label">Descrizione</label>
-        <textarea class="form-control" rows="5" id="comment"></textarea>
-    </div>
-        
-    <div class="mb-3 form-check ml-5">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-    </div>
-</form>
+﻿<div>
+    <h1>Benvenuto nella mia pizzeria!</h1>
+</div>
 
 
