--- a/LaMiaPizzeria/Views/Pizza/Index.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/Index.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="row">
         <div class="col-12">
-            <a class="btn btn-primary" href="@Url.Action("Create", "PizzaModel")">
+            <a class="btn btn-primary" href="@Url.Action("Create", "Pizza")">
                 Crea nuova pizza
             </a>
         </div>
@@ -42,13 +42,13 @@
                                 @pizza.Description
                             </td>
                             <td>
-                                <a class="btn btn-info btn-sm" href="@Url.Action("Details", "PizzaModel", new { id = pizza.Id })">
+                                <a class="btn btn-info btn-sm" href="@Url.Action("Details", "Pizza", new { id = pizza.Id })">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
                                 </a>
-                                <a class="btn btn-warning btn-sm mt-2" href="@Url.Action("Update", "PizzaModel", new {id = pizza.Id})">
+                                <a class="btn btn-warning btn-sm mt-2" href="@Url.Action("Update", "Pizza", new {id = pizza.Id})">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polygon points="14 2 18 6 7 17 3 17 3 13 14 2"></polygon><line x1="3" y1="22" x2="21" y2="22"></line></svg>
                                 </a>
-                                <form asp-controller="Article" asp-action="Delete" asp-route-id="@pizza.Id" method="post">
+                                <form asp-controller="Pizza" asp-action="Delete" asp-route-id="@pizza.Id" method="post">
                                     @Html.AntiForgeryToken()
                                     <button type="submit" class="btn btn-danger btn-sm mt-2">
                                         >
