--- a/LaMiaPizzeria/Views/Pizza/Update.cshtml
+++ b/LaMiaPizzeria/Views/Pizza/Update.cshtml
@@ -2,7 +2,7 @@
 
 <div class="container">
     <h2 class="mb-3">Modifica dell'articolo</h2>
-    <form asp-controller="Article" asp-action="Update" asp-route-id="@Model.Id" method="post">
+    <form asp-controller="Pizza" asp-action="Update" asp-route-id="@Model.Id" method="post">
         @Html.AntiForgeryToken()
         <div class="mb-3">
             <label asp-for="Id" class="form-label">Id Articolo</label>
